# Terean-Fullstack

./: .dockerignore  .editorconfig  .gitignore  PROJECT_CONTEXT.md  PROJECT_TODO.md  README.md  compose.cuda_test.yml  compose.dev.yml  compose.yml  dev.sh  prod.sh  requirements-dev.txt
backend/: .gitignore  MANIFEST.in  README.md  ReMi1dConsumer-v2.py  ReMi1dConsumer.py  auto_gen_project.py  consumer_dev_test.py  current_database_schema.dbml  env.example  main.py  misc_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_single_test.py  sql_alchemy_test.py  test_simple.py  token_manager_test.py
backend/Notebooks/: 0001.sgy  12-channel_VsSurf-ReMi_Geometry_Template.xlsx  2231315 Geometry.xlsx  24-channel_VsSurf-ReMi_Geometry_Template.xlsx  24-channel_VsSurf-ReMi_Geometry_W1.xlsx  AMS_Model_2.txt  DisperValidation.ipynb  Example1DS.ipynb  Example2DP.ipynb  Example2DS.ipynb  ExcelParsing.ipynb  Extract1dFrom2d.ipynb  ExtractSGYGeom.ipynb  Limit_Exploration.ipynb  RecordValidation.ipynb  VelModelPlotting.ipynb  VsSurf-ReMi_Geometry_LucilleL3.xlsx  VsSurf-ReMi_Geometry_LucilleL4.xlsx  disper_test_model.txt  set_notebook_path.py
backend/crud/: client_crud.py  contact_crud.py  file_crud.py  project_crud.py  sgy_file_crud.py  user_crud.py
backend/models/: __init__.py  client_model.py  contact_model.py  file_model.py  project_model.py  sgy_file_model.py  user_model.py
backend/router/: admin.py  authentication.py  process_router.py  project_router.py  sgy_file_router.py  users.py
backend/schemas/: client_schema.py  contact_schema.py  (+4 more)
(+255 files in other folders)
